deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-api 
  labels:
    app: deploy-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: app-backend
        image: roid/k8s-app-api:v1
        ports:
        - containerPort: 80
