deployment-dual-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-frontend 
  labels:
    app: frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: app-frontend
        image: roid/frontenddualpod:v1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend 
  labels:
    app: deployment-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: deployment-backend
  template:
    metadata:
      labels:
        app: deployment-backend
    spec:
      containers:
      - name: app-backend
        image: roid/backend:v1
        ports:
        - containerPort: 8180
          name: http-port
---
apiVersion: v1
kind: Service
metadata:
  name: srv-backend
spec:
  selector:
    app: deployment-backend
  ports:
    - protocol: TCP
      port: 8180
      targetPort: http-port
